--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -8,7 +8,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="600dp">
 
     <TextView
         android:id="@+id/tv_event_name"
@@ -62,8 +62,25 @@
             android:textColor="@color/colorText"
             android:layout_marginStart="20dp"
             android:textSize="16sp"
-            android:layout_marginTop="30dp"
-            android:onClick="OnChooseHour"/>
+            android:layout_marginTop="30dp" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="620dp">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btn_add_event"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            app:fabSize="mini"
+            android:backgroundTint="@color/colorPrimary"
+            android:src="@drawable/ic_add_white_24dp"
+            android:layout_margin="20dp"
+            android:layout_alignParentBottom="true"
+            android:onClick="OnAddEvent"/>
+
+    </RelativeLayout>
 
     </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
