--- a/app/src/main/res/layout/activity_regulamente.xml
+++ b/app/src/main/res/layout/activity_regulamente.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.NewsActivity"
-    android:fillViewport="true">
+    tools:context=".Activities.RegulamenteActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_margin="8dp"
-            android:onClick="OnRegulamente">
+            android:onClick="OnBurse">
 
             <View
                 android:layout_width="match_parent"
@@ -29,11 +28,11 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="REGULAMENT"
+                android:text="REGULAMENT BURSE"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:textColor="@color/colorWhite"
-                android:textSize="26sp"
+                android:textSize="24sp"
                 android:layout_gravity="center"/>
 
         </androidx.cardview.widget.CardView>
@@ -44,12 +43,12 @@
             android:layout_below="@id/cv_1"
             android:layout_height="150dp"
             android:layout_margin="8dp"
-            android:onClick="OnStructura">
+            android:onClick="OnCazare">
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_toStartOf="@+id/tv_2"
+                android:layout_toStartOf="@+id/tv_1"
                 android:scaleType="centerInside"
                 android:background="@color/colorPurple"
                 android:alpha="0.7"/>
@@ -57,13 +56,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="STRUCTURĂ AN UNIVERSITAR"
+                android:text="REGULAMENT CAZARE"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:textColor="@color/colorWhite"
-                android:textSize="26sp"
-                android:layout_gravity="center"
-                android:gravity="center"/>
+                android:textSize="24sp"
+                android:layout_gravity="center"/>
 
         </androidx.cardview.widget.CardView>
 
@@ -73,12 +71,12 @@
             android:layout_below="@id/cv_2"
             android:layout_height="150dp"
             android:layout_margin="8dp"
-            android:onClick="OnPractica">
+            android:onClick="OnTabere">
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_toStartOf="@+id/tv_3"
+                android:layout_toStartOf="@+id/tv_1"
                 android:scaleType="centerInside"
                 android:background="@color/colorPurple"
                 android:alpha="0.7"/>
@@ -86,28 +84,56 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="PRACTICĂ"
+                android:text="REGULAMENT TABERE"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:textColor="@color/colorWhite"
-                android:textSize="26sp"
-                android:layout_gravity="center"
-                android:gravity="center"/>
+                android:textSize="24sp"
+                android:layout_gravity="center"/>
 
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/cv_4"
+        android:id="@+id/cv_4"
+        android:layout_width="match_parent"
+        android:layout_below="@id/cv_3"
+        android:layout_height="150dp"
+        android:layout_margin="8dp"
+        android:onClick="OnEvaluare">
+
+        <View
             android:layout_width="match_parent"
-            android:layout_below="@id/cv_3"
+            android:layout_height="match_parent"
+            android:layout_toStartOf="@+id/tv_1"
+            android:scaleType="centerInside"
+            android:background="@color/colorPurple"
+            android:alpha="0.7"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="REGULAMENT EVALUARE ȘI NOTARE"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:textColor="@color/colorWhite"
+            android:textSize="24sp"
+            android:layout_gravity="center"
+            android:textAlignment="center"/>
+
+    </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_5"
+            android:layout_width="match_parent"
+            android:layout_below="@id/cv_4"
             android:layout_height="150dp"
             android:layout_margin="8dp"
-            android:onClick="OnExamene">
+            android:onClick="OnSef">
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_toStartOf="@+id/tv_4"
+                android:layout_toStartOf="@+id/tv_1"
                 android:scaleType="centerInside"
                 android:background="@color/colorPurple"
                 android:alpha="0.7"/>
@@ -115,13 +141,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="PLANIFICARE EXAMENE"
+                android:text="REGULAMENT ALEGERE STUDENȚI REPREZENTANȚI"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:textColor="@color/colorWhite"
-                android:textSize="26sp"
+                android:textSize="24sp"
                 android:layout_gravity="center"
-                android:gravity="center"/>
+                android:textAlignment="center"/>
 
         </androidx.cardview.widget.CardView>
 
