--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,19 +1,206 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.SettingsFragment">
 
-    <TextView
-        android:id="@+id/tv_setari"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Setariiii"
-        android:textAlignment="center"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="30dp"/>
+        android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/iv_icon"
+        android:layout_marginTop="20dp"
+        android:id="@+id/ll_email">
 
+        <ImageView
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:src="@drawable/ic_email_black_24dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginStart="20dp"
+            />
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/tv_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Schimbare e-mail"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="24dp"
+            android:textSize="18sp"
+            android:textColor="@color/colorText"
+            />
+
+    </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/ll_email"
+            android:layout_marginTop="20dp"
+            android:id="@+id/ll_email_nou">
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ajfalfjaw"
+                android:layout_marginStart="60dp"
+                android:singleLine="true"
+                android:textColor="@color/colorText"
+                android:textStyle="bold"
+                android:textSize="20sp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/ll_email_nou"
+            android:layout_marginTop="20dp"
+            android:id="@+id/ll_parola">
+
+            <ImageView
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:src="@drawable/ic_security_black_24dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginStart="20dp"
+
+                />
+
+            <TextView
+                android:id="@+id/tv_password"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Schimbare parolă"
+                android:layout_below="@+id/et_username"
+                android:layout_marginTop="24dp"
+                android:textSize="18sp"
+                android:textColor="@color/colorText"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/ll_parola"
+            android:layout_marginTop="20dp"
+            android:id="@+id/ll_parola_noua">
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ajfalfjaw"
+                android:layout_marginStart="60dp"
+                android:textColor="@color/colorText"
+                android:singleLine="true"
+                android:textStyle="bold"
+                android:textSize="20sp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/ll_parola_noua"
+            android:layout_marginTop="20dp"
+            android:id="@+id/ll_notificari">
+
+            <ImageView
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:src="@drawable/ic_notifications_black_24dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginStart="20dp"
+
+                />
+
+            <TextView
+                android:id="@+id/tv_notificari"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Notificări"
+                android:layout_below="@+id/et_username"
+                android:layout_marginTop="24dp"
+                android:textSize="18sp"
+                android:textColor="@color/colorText"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/ll_notificari"
+            android:layout_marginTop="30dp"
+            android:id="@+id/ll_on_off"
+            android:layout_marginStart="40dp">
+        <Switch
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/switch1"
+            android:checked="false"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_on_off"
+                android:layout_marginRight="50dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="2"
+            android:layout_marginTop="50dp"
+            android:layout_below="@+id/ll_on_off"
+            >
+
+            <ImageView
+                android:id="@+id/btn_cancel"
+                android:layout_marginStart="40dp"
+                android:layout_marginEnd="40dp"
+                android:layout_width="200dp"
+                android:layout_height="36dp"
+                android:layout_weight="1"
+                android:layout_marginTop="20dp"
+                android:textSize="20sp"
+                android:padding="6dp"
+                android:textAllCaps="false"
+                android:textColor="@color/colorTextButton"
+                android:layout_marginBottom="20dp"
+                android:src="@drawable/ic_clear_white_24dp"
+                android:background="@drawable/border_blue_full"
+                />
+
+            <ImageView
+                android:id="@+id/btn_save"
+                android:layout_marginStart="40dp"
+                android:layout_marginEnd="40dp"
+                android:layout_width="200dp"
+                android:layout_height="36dp"
+                android:layout_weight="1"
+                android:layout_below="@+id/et_car"
+                android:layout_marginTop="20dp"
+                android:textSize="20sp"
+                android:padding="6dp"
+                android:textAllCaps="false"
+                android:textColor="@color/colorWhite"
+                android:background="@drawable/border_blue_full"
+                android:layout_marginBottom="20dp"
+                android:src="@drawable/ic_done_white_24dp"
+                />
+        </LinearLayout>
+
+    </RelativeLayout>
+</androidx.core.widget.NestedScrollView>
